// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with help text 1`] = `
.c0 {
  margin: 0.9375rem 0;
}

.c4 {
  -webkit-font-smoothing: antialiased;
  color: #737373;
  display: block;
  font-family: "Source Sans Pro","Helvetica Neue",Helvetica,sans-serif;
  font-size: 14px;
  margin: 0.625rem 0 0;
}

.c1 {
  -webkit-font-smoothing: antialiased;
  background-color: #fafafa;
  border: 1px solid #cccccc;
  border-radius: 0.125rem;
  box-sizing: border-box;
  color: #3c3c3c;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  font-family: inherit;
  font-size: 14px;
  line-height: 1;
  outline: none;
  padding: 0.75rem 0.625rem;
  position: relative;
}

.c2 {
  background-color: inherit;
  border: none;
  box-sizing: border-box;
  color: inherit;
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  line-height: 1;
  outline: none;
}

.c2::-webkit-input-placeholder {
  color: #cccccc;
}

.c2::-moz-placeholder {
  color: #cccccc;
}

.c2:-ms-input-placeholder {
  color: #cccccc;
}

.c2::placeholder {
  color: #cccccc;
}

.c2:-moz-read-only {
  color: #bfbfbf;
}

.c2:read-only {
  color: #bfbfbf;
}

.c3 {
  box-sizing: border-box;
  color: #737373;
  fill: currentColor;
  margin-left: 0.625rem;
  position: relative;
  right: 0;
  top: 0;
}

.c3 * {
  display: inline-block;
}

<div
  className="c0"
>
  <p>
    Text above
  </p>
  <div
    className="c1"
    value=""
  >
    <input
      className="c2"
      maxLength={undefined}
      name="test"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      placeholder={undefined}
      readOnly={false}
      type="text"
      value=""
    />
    <div
      className="c3"
      onClick={[Function]}
      value=""
    />
  </div>
  <p>
    Text below
  </p>
  <span
    className="c4"
  >
    Foo
  </span>
</div>
`;

exports[`renders with label 1`] = `
.c0 {
  margin: 0.9375rem 0;
}

.c1 {
  -webkit-font-smoothing: antialiased;
  color: #737373;
  display: block;
  font-family: "Source Sans Pro","Helvetica Neue",Helvetica,sans-serif;
  font-size: 14px;
  line-height: 1.25;
  margin: 0 0 0.625rem;
}

.c2 {
  -webkit-font-smoothing: antialiased;
  background-color: #fafafa;
  border: 1px solid #cccccc;
  border-radius: 0.125rem;
  box-sizing: border-box;
  color: #3c3c3c;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  font-family: inherit;
  font-size: 14px;
  line-height: 1;
  outline: none;
  padding: 0.75rem 0.625rem;
  position: relative;
}

.c3 {
  background-color: inherit;
  border: none;
  box-sizing: border-box;
  color: inherit;
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  line-height: 1;
  outline: none;
}

.c3::-webkit-input-placeholder {
  color: #cccccc;
}

.c3::-moz-placeholder {
  color: #cccccc;
}

.c3:-ms-input-placeholder {
  color: #cccccc;
}

.c3::placeholder {
  color: #cccccc;
}

.c3:-moz-read-only {
  color: #bfbfbf;
}

.c3:read-only {
  color: #bfbfbf;
}

.c4 {
  box-sizing: border-box;
  color: #737373;
  fill: currentColor;
  margin-left: 0.625rem;
  position: relative;
  right: 0;
  top: 0;
}

.c4 * {
  display: inline-block;
}

<div
  className="c0"
>
  <label
    className="c1"
    htmlFor={undefined}
  >
    Foo
  </label>
  <p>
    Text above
  </p>
  <div
    className="c2"
    value=""
  >
    <input
      className="c3"
      maxLength={undefined}
      name="test"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      placeholder={undefined}
      readOnly={false}
      type="text"
      value=""
    />
    <div
      className="c4"
      onClick={[Function]}
      value=""
    />
  </div>
  <p>
    Text below
  </p>
</div>
`;

exports[`renders with no help text 1`] = `
.c0 {
  margin: 0.9375rem 0;
}

.c1 {
  -webkit-font-smoothing: antialiased;
  background-color: #fafafa;
  border: 1px solid #cccccc;
  border-radius: 0.125rem;
  box-sizing: border-box;
  color: #3c3c3c;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  font-family: inherit;
  font-size: 14px;
  line-height: 1;
  outline: none;
  padding: 0.75rem 0.625rem;
  position: relative;
}

.c2 {
  background-color: inherit;
  border: none;
  box-sizing: border-box;
  color: inherit;
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  line-height: 1;
  outline: none;
}

.c2::-webkit-input-placeholder {
  color: #cccccc;
}

.c2::-moz-placeholder {
  color: #cccccc;
}

.c2:-ms-input-placeholder {
  color: #cccccc;
}

.c2::placeholder {
  color: #cccccc;
}

.c2:-moz-read-only {
  color: #bfbfbf;
}

.c2:read-only {
  color: #bfbfbf;
}

.c3 {
  box-sizing: border-box;
  color: #737373;
  fill: currentColor;
  margin-left: 0.625rem;
  position: relative;
  right: 0;
  top: 0;
}

.c3 * {
  display: inline-block;
}

<div
  className="c0"
>
  <p>
    Text above
  </p>
  <div
    className="c1"
    value=""
  >
    <input
      className="c2"
      maxLength={undefined}
      name="test"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      placeholder={undefined}
      readOnly={false}
      type="text"
      value=""
    />
    <div
      className="c3"
      onClick={[Function]}
      value=""
    />
  </div>
  <p>
    Text below
  </p>
</div>
`;

exports[`renders with no label 1`] = `
.c0 {
  margin: 0.9375rem 0;
}

.c1 {
  -webkit-font-smoothing: antialiased;
  background-color: #fafafa;
  border: 1px solid #cccccc;
  border-radius: 0.125rem;
  box-sizing: border-box;
  color: #3c3c3c;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  font-family: inherit;
  font-size: 14px;
  line-height: 1;
  outline: none;
  padding: 0.75rem 0.625rem;
  position: relative;
}

.c2 {
  background-color: inherit;
  border: none;
  box-sizing: border-box;
  color: inherit;
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  line-height: 1;
  outline: none;
}

.c2::-webkit-input-placeholder {
  color: #cccccc;
}

.c2::-moz-placeholder {
  color: #cccccc;
}

.c2:-ms-input-placeholder {
  color: #cccccc;
}

.c2::placeholder {
  color: #cccccc;
}

.c2:-moz-read-only {
  color: #bfbfbf;
}

.c2:read-only {
  color: #bfbfbf;
}

.c3 {
  box-sizing: border-box;
  color: #737373;
  fill: currentColor;
  margin-left: 0.625rem;
  position: relative;
  right: 0;
  top: 0;
}

.c3 * {
  display: inline-block;
}

<div
  className="c0"
>
  <p>
    Text above
  </p>
  <div
    className="c1"
    value=""
  >
    <input
      className="c2"
      maxLength={undefined}
      name="test"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      placeholder={undefined}
      readOnly={false}
      type="text"
      value=""
    />
    <div
      className="c3"
      onClick={[Function]}
      value=""
    />
  </div>
  <p>
    Text below
  </p>
</div>
`;

exports[`renders with other props 1`] = `
.c0 {
  margin: 0.9375rem 0;
}

.c1 {
  -webkit-font-smoothing: antialiased;
  color: #737373;
  display: block;
  font-family: "Source Sans Pro","Helvetica Neue",Helvetica,sans-serif;
  font-size: 14px;
  line-height: 1.25;
  margin: 0 0 0.625rem;
}

<div
  className="className c0"
>
  <label
    className="labelClassName c1"
    htmlFor="labelFor"
  >
    Foo
  </label>
  <p>
    Blah
  </p>
</div>
`;
